--- a/notebooks/2.0-acbb-head-img-corr.ipynb
+++ b/notebooks/2.0-acbb-head-img-corr.ipynb
@@ -10,7 +10,7 @@
     "import os\n",
     "import seaborn as sns\n",
     "sys.path.append(\"../\")\n",
-    "from src.data.load_data import load_all_data, to_dF_F\n",
+    "from src.data.session import load_all_data, to_dF_F\n",
     "from scipy.spatial.transform import Rotation\n",
     "import numpy as np\n",
     "import pandas as pd\n",
