--- a/notebooks/1.1-acbb-loading-data.ipynb
+++ b/notebooks/1.1-acbb-loading-data.ipynb
@@ -9,14 +9,22 @@
     "import sys\n",
     "import os\n",
     "sys.path.append(\"../\")\n",
-    "from src.data.load_data import Session"
+    "from src.data.session import Session"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Line magic function `%autoreload` not found.\n"
+     ]
+    }
+   ],
    "source": [
     "%autoreload 2\n",
     "%reload_ext autoreload"
@@ -24,20 +32,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "project_dir = \"/Users/anacarolinabotturabarros/PycharmProjects/RSCMINHD/data\"\n",
-    "animal = 'cohoHDC1_mB1'\n",
-    "session = \"2023_03_10/12_51_18\"\n",
+    "animal = 'cohoHDC1_mG1'\n",
+    "session = \"2023_03_10/15_12_54\"\n",
     "\n",
     "my_session = Session(project_dir,session,animal)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +64,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Time Stamp (ms)</th>\n",
+       "      <th>qw</th>\n",
+       "      <th>qx</th>\n",
+       "      <th>qy</th>\n",
+       "      <th>qz</th>\n",
+       "      <th>frame</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-25</td>\n",
+       "      <td>0.453491</td>\n",
+       "      <td>0.298340</td>\n",
+       "      <td>-0.234924</td>\n",
+       "      <td>-0.806335</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>36</td>\n",
+       "      <td>0.421082</td>\n",
+       "      <td>0.388489</td>\n",
+       "      <td>-0.244751</td>\n",
+       "      <td>-0.782227</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>78</td>\n",
+       "      <td>0.324036</td>\n",
+       "      <td>0.474304</td>\n",
+       "      <td>-0.280090</td>\n",
+       "      <td>-0.769104</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>128</td>\n",
+       "      <td>0.163330</td>\n",
+       "      <td>0.502991</td>\n",
+       "      <td>-0.343506</td>\n",
+       "      <td>-0.776062</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>177</td>\n",
+       "      <td>0.131592</td>\n",
+       "      <td>0.485352</td>\n",
+       "      <td>-0.418457</td>\n",
+       "      <td>-0.756287</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18422</th>\n",
+       "      <td>932599</td>\n",
+       "      <td>0.894348</td>\n",
+       "      <td>0.347168</td>\n",
+       "      <td>0.046020</td>\n",
+       "      <td>-0.278381</td>\n",
+       "      <td>18422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18423</th>\n",
+       "      <td>932648</td>\n",
+       "      <td>0.892761</td>\n",
+       "      <td>0.348816</td>\n",
+       "      <td>0.112610</td>\n",
+       "      <td>-0.261902</td>\n",
+       "      <td>18423</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18424</th>\n",
+       "      <td>932700</td>\n",
+       "      <td>0.892822</td>\n",
+       "      <td>0.339966</td>\n",
+       "      <td>0.137512</td>\n",
+       "      <td>-0.261475</td>\n",
+       "      <td>18424</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18425</th>\n",
+       "      <td>932751</td>\n",
+       "      <td>0.898010</td>\n",
+       "      <td>0.322266</td>\n",
+       "      <td>0.119202</td>\n",
+       "      <td>-0.274841</td>\n",
+       "      <td>18425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18426</th>\n",
+       "      <td>932802</td>\n",
+       "      <td>0.900208</td>\n",
+       "      <td>0.328064</td>\n",
+       "      <td>0.083923</td>\n",
+       "      <td>-0.273743</td>\n",
+       "      <td>18426</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>18427 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Time Stamp (ms)        qw        qx        qy        qz  frame\n",
+       "0                  -25  0.453491  0.298340 -0.234924 -0.806335      0\n",
+       "1                   36  0.421082  0.388489 -0.244751 -0.782227      1\n",
+       "2                   78  0.324036  0.474304 -0.280090 -0.769104      2\n",
+       "3                  128  0.163330  0.502991 -0.343506 -0.776062      3\n",
+       "4                  177  0.131592  0.485352 -0.418457 -0.756287      4\n",
+       "...                ...       ...       ...       ...       ...    ...\n",
+       "18422           932599  0.894348  0.347168  0.046020 -0.278381  18422\n",
+       "18423           932648  0.892761  0.348816  0.112610 -0.261902  18423\n",
+       "18424           932700  0.892822  0.339966  0.137512 -0.261475  18424\n",
+       "18425           932751  0.898010  0.322266  0.119202 -0.274841  18425\n",
+       "18426           932802  0.900208  0.328064  0.083923 -0.273743  18426\n",
+       "\n",
+       "[18427 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_session.ho_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +263,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -98,7 +271,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -106,7 +279,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -114,7 +287,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -122,7 +295,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>4</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -137,68 +310,68 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1362631</th>\n",
-       "      <td>185</td>\n",
-       "      <td>12612</td>\n",
-       "      <td>0.025399</td>\n",
-       "      <td>14.348853</td>\n",
-       "      <td>0.000258</td>\n",
+       "      <th>1370095</th>\n",
+       "      <td>85</td>\n",
+       "      <td>18422</td>\n",
+       "      <td>0.307443</td>\n",
+       "      <td>0.092625</td>\n",
+       "      <td>0.003337</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1362632</th>\n",
-       "      <td>185</td>\n",
-       "      <td>12613</td>\n",
-       "      <td>0.024805</td>\n",
-       "      <td>14.013305</td>\n",
-       "      <td>0.000252</td>\n",
+       "      <th>1370096</th>\n",
+       "      <td>85</td>\n",
+       "      <td>18423</td>\n",
+       "      <td>0.305195</td>\n",
+       "      <td>0.091948</td>\n",
+       "      <td>0.003313</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1362633</th>\n",
-       "      <td>185</td>\n",
-       "      <td>12614</td>\n",
-       "      <td>0.024225</td>\n",
-       "      <td>13.685605</td>\n",
-       "      <td>0.000246</td>\n",
+       "      <th>1370097</th>\n",
+       "      <td>85</td>\n",
+       "      <td>18424</td>\n",
+       "      <td>0.302963</td>\n",
+       "      <td>0.091275</td>\n",
+       "      <td>0.003288</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1362634</th>\n",
-       "      <td>185</td>\n",
-       "      <td>12615</td>\n",
-       "      <td>0.023658</td>\n",
-       "      <td>13.365568</td>\n",
-       "      <td>0.000240</td>\n",
+       "      <th>1370098</th>\n",
+       "      <td>85</td>\n",
+       "      <td>18425</td>\n",
+       "      <td>0.300747</td>\n",
+       "      <td>0.090608</td>\n",
+       "      <td>0.003264</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1362635</th>\n",
-       "      <td>185</td>\n",
-       "      <td>12616</td>\n",
-       "      <td>0.023105</td>\n",
-       "      <td>13.053015</td>\n",
-       "      <td>0.000235</td>\n",
+       "      <th>1370099</th>\n",
+       "      <td>85</td>\n",
+       "      <td>18426</td>\n",
+       "      <td>0.298548</td>\n",
+       "      <td>0.089945</td>\n",
+       "      <td>0.003240</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1362636 rows × 5 columns</p>\n",
+       "<p>1370100 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         unit_id  frame         C       df/f    norm_C\n",
-       "0              1      0  0.000000   0.000000  0.000000\n",
-       "1              1      1  0.000000   0.000000  0.000000\n",
-       "2              1      2  0.000000   0.000000  0.000000\n",
-       "3              1      3  0.000000   0.000000  0.000000\n",
-       "4              1      4  0.000000   0.000000  0.000000\n",
-       "...          ...    ...       ...        ...       ...\n",
-       "1362631      185  12612  0.025399  14.348853  0.000258\n",
-       "1362632      185  12613  0.024805  14.013305  0.000252\n",
-       "1362633      185  12614  0.024225  13.685605  0.000246\n",
-       "1362634      185  12615  0.023658  13.365568  0.000240\n",
-       "1362635      185  12616  0.023105  13.053015  0.000235\n",
+       "         unit_id  frame         C      df/f    norm_C\n",
+       "0              0      0  0.000000  0.000000  0.000000\n",
+       "1              0      1  0.000000  0.000000  0.000000\n",
+       "2              0      2  0.000000  0.000000  0.000000\n",
+       "3              0      3  0.000000  0.000000  0.000000\n",
+       "4              0      4  0.000000  0.000000  0.000000\n",
+       "...          ...    ...       ...       ...       ...\n",
+       "1370095       85  18422  0.307443  0.092625  0.003337\n",
+       "1370096       85  18423  0.305195  0.091948  0.003313\n",
+       "1370097       85  18424  0.302963  0.091275  0.003288\n",
+       "1370098       85  18425  0.300747  0.090608  0.003264\n",
+       "1370099       85  18426  0.298548  0.089945  0.003240\n",
        "\n",
-       "[1362636 rows x 5 columns]"
+       "[1370100 rows x 5 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
